Aula sobre configurações internas e extenas

--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -6,6 +6,22 @@
 </head>
 <body>
 
+	<section>
+		<article>
+			<p>
+				<span>Seja bem vindo, <strong th:text="${nomeUsuario}"></strong></span>
+			</p>
+			<p>
+				<span>Server: <strong th:text="${server}"></strong></span>
+			</p>
+			<p>
+				<span>Aplicacao: <strong th:text="${aplicacao}"></strong></span>
+			</p>
+			<p>
+				<span>Descrição: <strong th:text="${descricao}"></strong></span>
+			</p>
+		</article>		
+	</section>
 	<table>
 		<tr>
 			<th>Nome</th>
